# video-language-model-playground

./: .gitignore  main.py  pyproject.toml
conf/: config.yaml  prefetch_egoschema.yaml
conf/generation/: balanced.yaml  creative.yaml  precise.yaml
conf/model/: qwen2_5_vl_3b.yaml  qwen3_vl_2b.yaml  qwen3_vl_4b.yaml  qwen_vl.yaml
conf/run/: default.yaml
conf/wandb/: default.yaml
config/: __init__.py  generation.py
docs/: hydra.md  nodeocc.md  transformers_inference.md
evals/: __init__.py  egoschema.py
models/: __init__.py  base.py  media.py  qwen.py  qwen2_5_vl.py  qwen_vl.py
scripts/: check-gpu.py  debug.sh  module-loads.sh  run.sbatch  run.sh  srun-cpu.sh  tunnel-pycharm.sh
utils/: obs.py  prefetch_egoschema.py
