[project]
name = "vllm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "transformers>=5.7.0",
    "torch>=2.6.0",
    "accelerate>=1.0.0",
    "pydevd-pycharm",
]

[project.scripts]
main = "main:main"

[tool.uv]
link-mode = "copy"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
