[project]
name = "vllm"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "transformers>=5.7.0",
    "torch>=2.6.0",
    "accelerate>=1.0.0",
    "hydra-core>=1.3",
    "debugpy",
]

[project.scripts]
main = "main:main"

[tool.uv]
link-mode = "copy"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
